# pg-migrate

./: .dockerignore  Cargo.toml  Containerfile  Makefile  README.md  compose.yml
.docker/db/: init.sql
.github/workflows/: ci.yaml
src/: db.rs  lib.rs  main.rs  phases.rs  tui.rs  verification.rs
