[package]
name = "pg-migrate"
version = "0.1.0"
edition = "2024"
description = "PostgreSQL migration tool"
license = "GPL-3.0-only"

[lib]
name = "pg_migrate"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "pg-migrate"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:clap"]

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
anyhow = "1.0.102"
indicatif = "0.18.4"
clap = { version = "4.5.60", features = ["derive"], optional = true }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros", "tls-rustls"] }

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = "z"
strip = true
