[package]
name = "pg-migrate"
version = "0.1.0"
edition = "2024"
description = "PostgreSQL migration tool"
license = "GPL-3.0-only"

[lib]
name = "pg_migrate"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "pg-migrate"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:clap"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"], optional = true }
env_logger = "0.11.9"
indicatif = "0.18.4"
indicatif-log-bridge = "0.2.3"
log = "0.4.26"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros", "tls-rustls"] }
tokio = { version = "1.49.0", features = ["full"] }

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = "z"
strip = true
