[package]
name = "pg-migrate"
version = "0.2.4"
edition = "2024"
description = "PostgreSQL migration tool"
license = "GPL-3.0-only"

[[bin]]
name = "pg-migrate"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:clap"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"], optional = true }
env_logger = "0.11.9"
indicatif = "0.18.4"
indicatif-log-bridge = "0.2.3"
log = "0.4.29"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros", "tls-rustls"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7.18"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
needless_for_each = { level = "allow", priority = 1 }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = "z"
strip = true
